# sotora

./: CONTRIBUTING.md  Cargo.toml  LICENSE.MIT  README.md
.github/workflows/: ci.yml
assets/fonts/sansation/: eula.txt
assets/meshes/: hex.gltf
assets/ui/hud_area_title_border/: spritesheet.afdesign
src/: hud_area_label.rs  main.rs  user_config.rs
src/battle/: camera.rs  mod.rs
src/dialog/: mod.rs
src/menu/: main_menu.rs  mod.rs  settings.rs
src/overworld/: camera.rs  interactable.rs  mod.rs  name_tags.rs  player.rs
src/overworld/interactables/: battle_starter.rs  dialog_starter.rs  mod.rs
