[package]
name = "sotora"
version = "0.1.0"
edition = "2018"

[dependencies]
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
ab_glyph = "0.2.9"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "c2a427f1a38db6b1d9798e631a7da7a8507fe18c"
features = ["serialize"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

