[package]
name = "sotora"
version = "0.1.0"
edition = "2018"

[dependencies]
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "8a9f475edb51ea45c976c000113ca55bac751f96"
features = ["serialize"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

