[package]
name = "sotora"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "4.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "f3de12bc5e03c58a9b863943b8db84a321422bec"
features = ["serialize"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

